# mem_mon

./: .gitignore  CMakeLists.txt  Makefile  common.h  mem_mon.cpp  mem_mon.h  process.cpp  process.h  system.cpp  system.h
doc/html/: settings.ini  settings.ini~  sort_hints.txt  sort_hints.txt~
doc/html/input/pl/: Bibliografia.txt  Biblioteka.txt  Instalacja.txt  Monitor.txt  Monitor.txt~  Testy.txt  Wprowadzenie.txt
include/: common.h  mallinfo_wrapper.h  mem_mon.h  process.h  system.h
src/: CMakeLists.txt  common.cpp  mallinfo_wrapper.cpp  memtrace.cpp  process.cpp  system.cpp
tests/: CMakeLists.txt  basic.cpp  basic_malloc.cpp  libtest.cpp  mallinfo_test.cpp  mthreaded.cpp  mthreaded2.cpp  mthreaded3.cpp  perf.cpp  signals.cpp
