set(EXTRA_LIBS ${EXTRA_LIBS} mem_mon)

add_executable (libtest libtest.cpp)
add_executable (mallinfo_test mallinfo_test.cpp)
add_executable (basic_malloc basic_malloc.cpp)
add_executable (perf perf.cpp)
add_executable (basic basic.cpp)
add_executable (mthreaded mthreaded.cpp)
add_executable (mthreaded2 mthreaded2.cpp)
add_executable (mthreaded3 mthreaded3.cpp)
add_executable (signals signals.cpp)

target_link_libraries(libtest ${EXTRA_LIBS})
target_link_libraries(mallinfo_test ${EXTRA_LIBS})
target_link_libraries(basic_malloc ${EXTRA_LIBS})
target_link_libraries(perf ${EXTRA_LIBS})
target_link_libraries(basic rt)
target_link_libraries(mthreaded pthread)
target_link_libraries(mthreaded2 pthread)
target_link_libraries(mthreaded3 pthread)

